--- a/src/app/offer-form/offer-form.component.html
+++ b/src/app/offer-form/offer-form.component.html
@@ -20,6 +20,9 @@
             <nz-input-group [nzSize]="'default'" [nzSuffix]="'$'">
               <input type="text" formControlName="dailyRateOffer" nz-input placeholder={{instructor.dailyRate}} />
             </nz-input-group>
+            <nz-form-explain *ngIf="validateForm.get('dailyRateOffer')?.dirty && validateForm.get('dailyRateOffer')?.errors">
+              The input is not valid!
+            </nz-form-explain>
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -33,6 +36,9 @@
             <nz-input-group [nzSize]="'default'" [nzSuffix]="'$'">
               <input type="text" formControlName="teOffer" nz-input />
             </nz-input-group>
+            <nz-form-explain *ngIf="validateForm.get('teOffer')?.dirty && validateForm.get('teOffer')?.errors">
+              The input is not valid!
+            </nz-form-explain>
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -69,6 +75,9 @@
     <nz-form-item>
       <nz-form-control>
         <textarea rows="4" formControlName="comments" nz-input></textarea>
+        <nz-form-explain *ngIf="validateForm.get('comments')?.dirty && validateForm.get('comments')?.errors">
+          Too long!
+        </nz-form-explain>
       </nz-form-control>
     </nz-form-item>
 
