--- a/src/app/components/instructor-detail/instructor-detail.component.html
+++ b/src/app/components/instructor-detail/instructor-detail.component.html
@@ -12,27 +12,27 @@
         <i nz-icon nzType="star" nzTheme="outline"></i>
         {{instructor.rating}}
         <br/>
-        <small><small> Rating ({{instructor.reviews}} Reviews)</small></small>
+        <small><small> {{'RATING' | translate }} ({{instructor.reviews}} {{'REVIEWS' | translate }})</small></small>
       </div>
       <div style="display: inline-block; margin-left: 10px">
         {{instructor.deliviries}}
         <br/>
-        <small><small> Deliviries</small></small>
+        <small><small> {{'DELIVERIES' | translate }}</small></small>
       </div>
       <div style="display: inline-block; margin-left: 10px">
         ${{instructor.startRate}}
         <br/>
-        <small><small>Start Rate</small></small>
+        <small><small>{{'START_RATE' | translate }}</small></small>
       </div>
     </span>
     <br/><br/>
-    <button *ngIf="!isOffered" style="margin-left: 42%" nz-button nzType="primary" (click)="sendOffer()">Send Offer</button>
+    <button *ngIf="!isOffered" style="margin-left: 42%" nz-button nzType="primary" (click)="sendOffer()">{{'SEND_OFFER' | translate }}</button>
   </nz-card>
 </div>
 
 <ng-template #extraTemplate>
   <div *ngIf="isOffered">
     <i nz-icon nzType="check-square" nzTheme="fill" style="color:green"></i>
-    Offer Sent
+    {{'OFFER_SENT' | translate }}
   </div>
 </ng-template>
